--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
     <head></head>
     <body>
         <div>
-          <h1>Jane Doe</h1>
-          <p>Hello, I'm a cereal killer.</p>
+          <h1>DUDE</h1>
+          <p>{{ content['msg'] }}</p>
       </div>
     </body>
 </html>
